--- a/Almostengr.PetFeeder.Web/Views/Shared/_Layout.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="schedule" asp-action="Index">Schedules</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="watering" asp-action="Index">Waterings</a>
+                        </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="settings" asp-action="Index">Settings</a>
+                        </li>
                     </ul>
                 </div>
             </div>
