--- a/Almostengr.PetFeeder.Web/Views/_ViewImports.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Almostengr.PetFeeder.Web
 @using Almostengr.PetFeeder.Web.Models
+@using Almostengr.PetFeeder.Api.Enums
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
