--- a/Almostengr.PetFeeder.Web/Views/Home/Index.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Home/Index.cshtml
@@ -2,21 +2,7 @@
     @* ViewData["Title"] = "Home Page"; *@
 }
 
-@* <div class="text-center">
+<div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div> *@
-
-<div class="row text-center">
-    <div class="col-6">
-        <h2>Lastest Feedings</h2>
-        @* <partial name="_LatestFeedings.cshtml" /> *@
-        @{
-            Html.RenderPartial("_LatestFeedings");
-        }
-    </div>
-    <div class="col-6">
-        <h2>Schedule</h2>
-        <partial name="_Schedule.cshtml" />
-    </div>
 </div>
