--- a/Almostengr.PetFeeder.Web/Views/Schedule/Index.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Schedule/Index.cshtml
@@ -1,7 +1,7 @@
 @model List<ScheduleViewModel>
+@ViewData["Title"] = "Scheduled Feeding";
 
 <div class="row bg-dark text-white">
-    @* <div class="col-2">Schedule ID</div> *@
     <div class="col-2">Schedule Time</div>
     <div class="col-2">Occurrence</div>
     <div class="col-2">Active</div>
@@ -9,10 +9,8 @@
 @foreach (var item in Model)
 {
     <div class="row">
-        @* <div class="col-2">@item.Id</div> *@
-        <div class="col-2">@item.ScheduledTime</div>
-        <!-- TODO place value once table has been updated -->
-        <div class="col-2">Daily</div>
-        <div class="col-2">@item.IsActive</div>
-    </div>
+    <div class="col-2">@item.ScheduledTime</div>
+    <div class="col-2">@item.Frequency</div>
+    <div class="col-2">@item.IsActive</div>
+</div>
 }
