#2 Updated styling and page title

--- a/Almostengr.PetFeeder.Web/Views/Schedule/Create.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Schedule/Create.cshtml
@@ -1,13 +1,17 @@
 @inject DayFrequency DayFrequency
 @model ScheduleViewModel
-@ViewData["Title"] = "Create Scheduled Feeding";
+
+
+<h1>All Feedings</h1>
+
 <form> 
     <input type="hidden" name="id" id="id"/>
     <div>
         <label for="frequency">Frequency</label>
         @* <input name="frequency" id="frequency" asp-for="@Model.Frequency" class="form-control" *@
-        <select asp-for="@Model.Frequency" name="frequency" id="frequency" class="form-control" asp-items="@DayFrequency">
-        </select>
+        @* <select asp-for="@Model.Frequency" name="frequency" id="frequency" class="form-control" asp-items="@DayFrequency.ToList()">
+        </select> *@
+        
     </div>
     <div>
         <label for="isActive">Enabled</label>
