--- a/Almostengr.PetFeeder.Web/Views/Shared/_Layout.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Shared/_Layout.cshtml
@@ -1,35 +1,42 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Dog Feeder</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/almostengr.min.css" />
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Dog Feeder</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="feeding" asp-action="Index">Feedings</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="feeding"
+                                asp-action="Index">Feedings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="schedule" asp-action="Index">Schedules</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="schedule"
+                                asp-action="Index">Schedules</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="watering" asp-action="Index">Waterings</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="watering"
+                                asp-action="Index">Waterings</a>
                         </li>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="settings" asp-action="Index">Settings</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="setting"
+                                asp-action="Index">Settings</a>
                         </li>
                     </ul>
                 </div>
@@ -44,9 +51,9 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - 
-            <a href="https://thealmostengineer.com/dogfeeder" target="_blank">Almostengr DogFeeder</a>
-            @* <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
+            &copy; @DateTime.Now.Year |
+            <a href="https://thealmostengineer.com/petfeeder" target="_blank">Documentation</a> |
+            <a href="https://github.com/almostengr/petfeeder" target="_blank">Source Code</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -54,4 +61,5 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
+
 </html>
