#1 Updates made so that actions are done through API

--- a/Almostengr.PetFeeder.Web/Views/Feeding/All.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Feeding/All.cshtml
@@ -1,6 +1,7 @@
 @model List<FeedingViewModel>
 
 <h1>All Feedings</h1>
+<partial name="_FeedingNavigation">
 
 <div class="row">
     <div class="col-2 bg-dark text-white">Date/Time</div>
