--- a/Almostengr.PetFeeder.Web/Views/Schedule/Index.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Schedule/Index.cshtml
@@ -1,5 +1,7 @@
 @model List<ScheduleViewModel>
 
+<h1>Schedules</h1>
+
 <div class="row bg-dark text-white">
     <div class="col-2">Schedule Time</div>
     <div class="col-2">Occurrence</div>
