#2 Updated UI, controllers to call backend; remove unused files

--- a/Almostengr.PetFeeder.Web/Views/NightLight/Index.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/NightLight/Index.cshtml
@@ -1,7 +1,15 @@
-<form method="post" action="/nightlight/on">
-<button type="submit">On</button>
-</form>
-
-<form method="post" action="/nightlight/off">
-<button type="submit">Off</button>
-</form>
+<div class="row">
+    <div class="col-8">
+        <h1>Night Light</h1>
+    </div>
+    <div class="col-2 text-right">
+        <form method="post" action="/nightlight/on">
+            <button class="btn btn-success" type="submit">On</button>
+        </form>
+    </div>
+    <div class="col-2 text-right">
+        <form method="post" action="/nightlight/off">
+            <button class="btn btn-danger" type="submit">Off</button>
+        </form>
+    </div>
+</div>
