--- a/Almostengr.PetFeeder.Web/Views/Feeding/All.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Feeding/All.cshtml
@@ -1,19 +1,27 @@
 @model List<FeedingViewModel>
+@{
+    var sortedModel = Model.OrderByDescending(m => m.Timestamp);
+}
 
 <h1>All Feedings</h1>
-<partial name="_FeedingNavigation">
 
+@if (Model.Count > 0)
+{
     <div class="row">
-        <div class="col-2 bg-dark text-white">Date/Time</div>
-        <div class="col-2 bg-dark text-white">Scheduled?</div>
+        <div class="col bg-dark text-white">Date/Time</div>
+        <div class="col bg-dark text-white">Scheduled</div>
     </div>
 
-    @foreach (var item in Model)
+    @foreach (var item in sortedModel)
     {
         string wasScheduled = item.ScheduleId > 0 ? "Yes" : "No";
 
         <div class="row">
-            <div class="col-2 px-1">@item.Timestamp</div>
-            <div class="col-2 px-1">@wasScheduled</div>
+            <div class="col px-1">@item.Timestamp</div>
+            <div class="col px-1">@wasScheduled</div>
         </div>
     }
+}
+else {
+    <h2 class="text-center">No feedings have occurred.</h2>
+}
