--- a/Almostengr.PetFeeder.Web/Views/Schedule/Index.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Schedule/Index.cshtml
@@ -1,21 +1,38 @@
 @model List<ScheduleViewModel>
 
-<h1>Schedules</h1>
-
-<div class="row bg-dark text-white">
-    <div class="col-2">Schedule Time</div>
-    <div class="col-2">Occurrence</div>
-    <div class="col-2">Active</div>
-</div>
-@foreach (var item in Model)
-{
-    <div class="row">
-    <div class="col-2">@item.ScheduledTime</div>
-    <div class="col-2">@item.Frequency</div>
-    <div class="col-2">@item.IsActive</div>
-    <div class="col-2">
-        <a class="nav-link text-dark" href="/schedules/edit/@item.Id">Edit</a>
-        <a class="nav-link text-dark" href="/schedule/delete/@item.Id">Delete</a>
+<div class="row">
+    <div class="col-8">
+        <h1>Schedules</h1>
+    </div>
+    <div class="col-4 text-right">
+        <a href="/schedule/CreateSchedule"><button id="submit" class="btn btn-secondary">Create</button></a>
     </div>
 </div>
+
+
+@if (Model.Count > 0)
+{
+    <div class="row bg-dark text-white">
+    <div class="col">Schedule Time</div>
+    <div class="col">Occurrence</div>
+    <div class="col">Active</div>
+    <div class="col">Actions</div>
+    </div>
+
+    @foreach (var item in Model)
+    {
+    <div class="row">
+        <div class="col">@item.ScheduledTime</div>
+        <div class="col">@item.Frequency</div>
+        <div class="col">@item.IsActive</div>
+        <div class="col">
+            <a class="nav-link text-dark" href="/schedules/edit/@item.Id">Edit</a>
+            <a class="nav-link text-dark" href="/schedule/delete/@item.Id">Delete</a>
+        </div>
+    </div>
+    }
+}
+else
+{
+    <h2 class="text-center my-2">No schedules have been created.</h2>
 }
