--- a/Almostengr.PetFeeder.Web/Views/Watering/All.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Watering/All.cshtml
@@ -2,13 +2,20 @@
 
 <h1>All Waterings</h1>
 
-<div class="row">
-    <div class="col-2 bg-dark text-white">Date/Time</div>
-</div>
-
-@foreach (var item in Model)
+@if (Model.Count > 0)
 {
     <div class="row">
-    <div class="col-2 px-1">@item.WateringTime</div>
-</div>
+    <div class="col bg-dark text-white">Date/Time</div>
+    </div>
+
+    @foreach (var item in Model)
+    {
+        <div class="row">
+        <div class="col px-1">@item.WateringTime</div>
+        </div>
+    }
+}
+else
+{
+    <h2 class="text-center">No waterings have occurred.</h2>
 }
