--- a/Almostengr.PetFeeder.Web/Views/Watering/Index.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Watering/Index.cshtml
@@ -1,18 +1,28 @@
 @model List<WateringViewModel>
 
-<h1>Latest Waterings</h1>
-
-<div class="row">
-    <div class="col-2 bg-dark text-white">Date/Time</div>
+<div class="row pb-3">
+    <div class="col-10">
+        <h1>Latest Watering</h1>
+    </div>
+    <div class="col-2 text-right">
+        <a href="/watering/all"><button type="submit" id="submit" class="btn btn-secondary">All</button></a>
+    </div>
 </div>
 
-@foreach (var item in Model)
+@if (Model.Count > 0)
 {
     <div class="row">
-    <div class="col-2 px-1">@item.WateringTime</div>
-</div>
-}
+    <div class="col bg-dark text-white">Date/Time</div>
+    </div>
 
-<div>
-    <a class="nav-link text-dark" asp-area="" asp-controller="watering" asp-action="all">All Waterings</a>
-</div>
+    @foreach (var item in Model)
+    {
+        <div class="row">
+        <div class="col px-1">@item.WateringTime</div>
+        </div>
+    }
+}
+else
+{
+    <h2 class="text-center">No waterings have occurred.</h2>
+}
