--- a/Almostengr.PetFeeder.Web/Views/NightLight/Index.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/NightLight/Index.cshtml
@@ -3,12 +3,14 @@
         <h1>Night Light</h1>
     </div>
     <div class="col-2 text-right">
-        <form method="post" action="/nightlight/on">
+        <form method="post" action="/nightlight">
+            <input type="hidden" name="LightOn" value="true" />
             <button class="btn btn-success" type="submit">On</button>
         </form>
     </div>
     <div class="col-2 text-right">
-        <form method="post" action="/nightlight/off">
+        <form method="post" action="/nightlight">
+            <input type="hidden" name="LightOn" value="false" />
             <button class="btn btn-danger" type="submit">Off</button>
         </form>
     </div>
