--- a/Almostengr.PetFeeder.Web/Views/Shared/_WateringNavigation.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Shared/_WateringNavigation.cshtml
@@ -1,6 +1,6 @@
 <div>
     <ul>
-        <li><a class="text-dark" asp-area="" asp-controller="watering" asp-action="index">Latest Watering</a></li>
-        <li><a class="text-dark" asp-area="" asp-controller="watering" asp-action="all">All Watering</a></li>
+        <li><a class="text-dark" asp-area="" asp-controller="watering" asp-action="index">Latest Waterings</a></li>
+        <li><a class="text-dark" asp-area="" asp-controller="watering" asp-action="all">All Waterings</a></li>
     </ul>
 </div>
