--- a/Almostengr.PetFeeder.Web/Views/Shared/_Layout.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year |
+            &copy; @DateTime.Now.Year Robinson Handy and Technology Servies |
             <a href="https://thealmostengineer.com/petfeeder" target="_blank">Documentation</a> |
             <a href="https://github.com/almostengr/petfeeder" target="_blank">Source Code</a>
         </div>
