--- a/Almostengr.PetFeeder.Web/Views/Schedule/Index.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Schedule/Index.cshtml
@@ -5,7 +5,7 @@
         <h1>Schedules</h1>
     </div>
     <div class="col-4 text-right">
-        <a href="/schedule/createedit"><button id="submit" class="btn btn-secondary">Create</button></a>
+        <a href="/schedule/create"><button id="submit" class="btn btn-secondary">Create</button></a>
     </div>
 </div>
 
