Added DTO; Updated views, repository methods

--- a/Almostengr.PetFeeder.Web/Views/Schedule/CreateEdit.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Schedule/CreateEdit.cshtml
@@ -1,5 +1,4 @@
-@* @inject Almostengr.PetFeeder.Api.Enums.DayFrequency DayFrequency *@
-@model Almostengr.PetFeeder.Web.Models.ScheduleViewModel
+@model ScheduleViewModel
 
 <h1>Feeding</h1>
 
