--- a/Almostengr.PetFeeder.Web/Views/_ViewImports.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Almostengr.PetFeeder.Web
 @using Almostengr.PetFeeder.Web.Models
-@using Almostengr.PetFeeder.Api.Enums
+@using Almostengr.PetFeeder.Common.Enums
+@using Almostengr.PetFeeder.Common.DataTransferObject
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
