--- a/Almostengr.PetFeeder.Web/Views/Schedule/CreateEdit.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Schedule/CreateEdit.cshtml
@@ -18,6 +18,7 @@
         <label for="isActive">Enabled</label>
         <input type="checkbox" name="isActive" id="isActive" value="true" asp-for="@Model.IsActive" />
     </div>
+    @* todo need to add remaining fields *@
     <div>
         <button type="submit" name="submit">Save</button>
     </div>
