--- a/Almostengr.PetFeeder.Web/Views/Setting/Index.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Setting/Index.cshtml
@@ -3,12 +3,14 @@
 <div class="row bg-dark text-white">
     <div class="col">Key</div>
     <div class="col">Value</div>
+    <div class="col">Last Updated</div>
 </div>
 @foreach (var item in Model)
 {
     <div class="row">
         <div class="col">@item.Key</div>
         <div class="col">@item.Value</div>
+        <div class="col">@item.Modified</div>
         <div class="col">
             <a class="nav-link text-dark" href="/settings/edit/@item.Key">Edit</a>
         </div>
