--- a/Almostengr.PetFeeder.Web/Views/Watering/All.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Watering/All.cshtml
@@ -6,12 +6,14 @@
 {
     <div class="row">
     <div class="col bg-dark text-white">Date/Time</div>
+    <div class="col bg-dark text-white">Amount</div>
     </div>
 
     @foreach (var item in Model)
     {
         <div class="row">
         <div class="col px-1">@item.Created</div>
+        <div class="col px-1">@item.Amount</div>
         </div>
     }
 }
