--- a/Almostengr.PetFeeder.Web/Views/Alarm/Index.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Alarm/Index.cshtml
@@ -1,18 +1,13 @@
-@model List<Watering>
+@model IList<AlarmDto>
 
-<div class="row pb-3">
-    <div class="col-10">
-        <h1>Latest Watering</h1>
-    </div>
-    <div class="col-2 text-right">
-        <a href="/watering/all"><button type="submit" id="submit" class="btn btn-secondary">All</button></a>
-    </div>
-</div>
+
+<h1>Recent Alarms</h1>
 
 @if (Model.Count > 0)
 {
     <div class="row">
         <div class="col bg-dark text-white">Date/Time</div>
+        <div class="col bg-dark text-white">Scheduled</div>
         <div class="col bg-dark text-white">Amount</div>
     </div>
 
@@ -20,11 +15,11 @@
     {
         <div class="row">
             <div class="col px-1">@item.Created</div>
+            <div class="col px-1">@item.WasScheduled</div>
             <div class="col px-1">@item.Amount</div>
         </div>
     }
 }
-else
-{
-    <h2 class="text-center">No waterings have occurred.</h2>
+else {
+    <h2 class="text-center">No feedings have occurred.</h2>
 }
