--- a/Almostengr.PetFeeder.Web/Views/Schedule/Index.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Schedule/Index.cshtml
@@ -14,6 +14,7 @@
     <div class="row bg-dark text-white">
     <div class="col">Schedule Time</div>
     <div class="col">Occurrence</div>
+    <div class="col">Amount</div>
     <div class="col">Active</div>
     <div class="col">Actions</div>
     </div>
@@ -23,6 +24,7 @@
         <div class="row">
             <div class="col">@item.ScheduledTime</div>
             <div class="col">@item.Frequency</div>
+            <div class="col">@item.FeedingAmount</div>
             <div class="col">@item.IsActive</div>
             <div class="col">
                 <form method="get" action="/schedule/edit/@item.ScheduleId">
