--- a/Almostengr.PetFeeder.Web/Views/Alarm/Index.cshtml
+++ b/Almostengr.PetFeeder.Web/Views/Alarm/Index.cshtml
@@ -6,20 +6,29 @@
 @if (Model.Count > 0)
 {
     <div class="row">
-        <div class="col bg-dark text-white">Date/Time</div>
-        <div class="col bg-dark text-white">Scheduled</div>
-        <div class="col bg-dark text-white">Amount</div>
-    </div>
+    <div class="col bg-dark text-white">Date/Time</div>
+    <div class="col bg-dark text-white">Message</div>
+    <div class="col bg-dark text-white">Active</div>
+    <div class="col bg-dark text-white">Actions</div>
+</div>
 
     @foreach (var item in Model)
     {
         <div class="row">
             <div class="col px-1">@item.Created</div>
-            <div class="col px-1">@item.WasScheduled</div>
-            <div class="col px-1">@item.Amount</div>
+            <div class="col px-1">@item.Message</div>
+            <div class="col px-1">@item.IsActive</div>
+            <div class="col px-1">
+                @* todo dismiss alert when clicked *@
+                <form>
+                    <input type="hidden" name="IsActive" value="false" />
+                    <button class="btn btn-primary">Dismiss</button>
+                </form>
+            </div>
         </div>
     }
 }
-else {
+else
+{
     <h2 class="text-center">No feedings have occurred.</h2>
 }
